--- a/CompletedSolution/Consumer/tests/tests.csproj
+++ b/CompletedSolution/Consumer/tests/tests.csproj
@@ -1,4 +1,4 @@
-<Project Sdk="Microsoft.NET.Sdk">
+﻿<Project Sdk="Microsoft.NET.Sdk">
   <PropertyGroup>
     <TargetFramework>net7.0</TargetFramework>
     <IsPackable>false</IsPackable>
@@ -8,9 +8,9 @@
   </ItemGroup>
   <ItemGroup>
     <PackageReference Include="Microsoft.NET.Test.Sdk" Version="17.5.0" />
-    <PackageReference Include="PactNet.OSX" Version="2.5.2" />
+    <PackageReference Include="PactNet.OSX" Version="2.6.2" />
     <PackageReference Include="PactNet.Windows" Version="2.6.2" />
-    <PackageReference Include="PactNet.Linux.x86" Version="2.5.2" />
+    <PackageReference Include="PactNet.Linux.x86" Version="2.6.2" />
     <PackageReference Include="xunit" Version="2.4.2" />
     <PackageReference Include="xunit.runner.visualstudio" Version="2.4.5">
       <PrivateAssets>all</PrivateAssets>
