--- a/CompletedSolution/Provider/src/Properties/launchSettings.json
+++ b/CompletedSolution/Provider/src/Properties/launchSettings.json
@@ -7,7 +7,7 @@
             "environmentVariables": {
                 "ASPNETCORE_ENVIRONMENT": "Development",
                 "ASPNETCORE_URLS": "http://localhost:9000/",
-                "PACT_PROVIDER_SHOULD_THROW_404": false
+                "PACT_PROVIDER_SHOULD_THROW_404": "false"
             }
         }
     }
